--- a/src/pages/OrderList/index.less
+++ b/src/pages/OrderList/index.less
@@ -70,6 +70,11 @@
     }
   }
 
+  .download-btn {
+    font-size: 18px;
+    color: #1890ff;
+  }
+
   .my-tag {
     max-width: 110px;
     padding: 2px 10px;
