--- a/src/components/DfAlertCard/index.less
+++ b/src/components/DfAlertCard/index.less
@@ -16,6 +16,14 @@
     padding-block: 2px;
     border-radius: 4px;
     background-color: rgb(255 255 255 / 50%);
+
+    .text {
+      font-size: 0.63rem;
+    }
+
+    .value {
+      font-size: 1rem;
+    }
   }
 
   &.nomal {
