--- a/src/global.less
+++ b/src/global.less
@@ -1,2 +1,13 @@
 @import url('@/assets/styles/flex.less');
 @import url('@/assets/styles/public.less');
+
+html,
+body {
+  font-size: 16px;
+}
+@media screen and (max-width: 1360px) {
+  html,
+  body {
+    font-size: 14px;
+  }
+}
