--- a/src/components/DfNodeLine/index.less
+++ b/src/components/DfNodeLine/index.less
@@ -30,8 +30,8 @@
       .circle {
         position: relative;
         z-index: 2;
-        width: 20px;
-        height: 20px;
+        width: 22px;
+        height: 22px;
         border: 3px solid #1890ff;
         border-radius: 100%;
         background-color: white;
@@ -46,15 +46,35 @@
       .step-name {
         padding-right: 18px;
         border-radius: 20px;
-        font-size: 14px;
+        font-size: 0.88rem;
         padding-left: 0;
-        height: 22px;
-        line-height: 22px;
+        height: 24px;
+        line-height: 24px;
         background-color: #e4f4ff;
         border: 1px solid #dff0fe;
+        box-shadow: 5px 5px 8px 0 rgb(228 244 255 / 50%);
+        // box-shadow: 5px 5px 8px 0 rgb(0 0 0 / 10%);
 
         .name {
           margin-left: 10px;
+        }
+      }
+
+      &.disabled {
+        opacity: 0.5;
+
+        .circle {
+          border-color: #d3d3d3;
+        }
+
+        .step-name {
+          color: #333;
+          border-color: #efefef;
+          background-color: #efefef;
+
+          .name {
+            margin-left: 10px;
+          }
         }
       }
 
@@ -84,6 +104,12 @@
     // 针对有选择的
     &.has-checked {
       .step-item:not(.active) {
+        &.disabled {
+          // cursor: not-allowed;
+          // pointer-events: none;
+          opacity: 0.5;
+        }
+
         .circle {
           border-color: #d3d3d3;
         }
@@ -131,5 +157,14 @@
         }
       }
     }
+  }
+}
+
+.title-tooltip {
+  min-width: 200px;
+  max-width: 320px;
+
+  .title-line {
+    word-break: break-all;
   }
 }
