feat: 测试、需求调整

--- a/src/assets/styles/public.less
+++ b/src/assets/styles/public.less
@@ -11,11 +11,15 @@
 }
 
 .fs-14 {
-  .fs();
+  .fs(14px);
 }
 
 .fs-12 {
   .fs(12px);
+}
+
+.fs-20 {
+  .fs(20px);
 }
 
 .pointer {
@@ -44,6 +48,10 @@
 
 .m-l-10 {
   margin-inline-start: 10px;
+}
+
+.m-r-5 {
+  margin-inline-end: 5px;
 }
 
 .c-white {
