--- a/src/components/DfNodeLine/index.less
+++ b/src/components/DfNodeLine/index.less
@@ -52,8 +52,9 @@
         line-height: 24px;
         background-color: #e4f4ff;
         border: 1px solid #dff0fe;
-        box-shadow: 5px 5px 8px 0 rgb(228 244 255 / 50%);
+        // box-shadow: 5px 5px 8px 0 rgb(228 244 255 / 50%);
         // box-shadow: 5px 5px 8px 0 rgb(0 0 0 / 10%);
+        box-shadow: 3px 3px 8px 0 rgb(0 0 0 / 10%);
 
         .name {
           margin-left: 10px;
