--- a/src/pages/OrderDashboard/index.less
+++ b/src/pages/OrderDashboard/index.less
@@ -19,22 +19,23 @@
 
           .order-container {
             width: 100%;
-            padding: 20px;
+            min-width: 1000px;
+            padding: 1rem;
             align-items: inherit;
             overflow-y: auto;
 
             .flex-distribution,
             .flex-early-warning {
-              padding: 14px;
+              padding: 1rem;
               background-color: white;
               min-height: 400px;
               overflow-y: auto;
             }
 
             .flex-distribution {
-              flex-basis: 43%;
-              margin-right: 20px;
-              min-width: 500px;
+              flex-basis: 31.75rem;
+              margin-right: 1rem;
+              // min-width: 500px;
               overflow-x: auto;
 
               .deselect-btn {
@@ -48,7 +49,8 @@
               }
 
               .box-left {
-                margin-right: 15%;
+                // margin-right: 15%;
+                margin-right: 4rem;
                 max-width: 37.5%;
               }
 
