--- a/src/components/DfNodeLine/index.less
+++ b/src/components/DfNodeLine/index.less
@@ -1,4 +1,8 @@
 .defined-node-line {
+  .step-title {
+    margin-right: -1rem;
+  }
+
   .step-content {
     .step-item {
       position: relative;
@@ -44,7 +48,7 @@
       }
 
       .step-name {
-        padding-right: 18px;
+        padding-right: 0.6rem;
         border-radius: 20px;
         font-size: 0.88rem;
         padding-left: 0;
@@ -57,7 +61,7 @@
         box-shadow: 3px 3px 8px 0 rgb(0 0 0 / 10%);
 
         .name {
-          margin-left: 10px;
+          margin-left: 0.4rem;
         }
       }
 
