--- a/src/components/DfAlertCard/index.less
+++ b/src/components/DfAlertCard/index.less
@@ -29,6 +29,7 @@
 
     & > span {
       max-height: 44px;
+      font-weight: bold;
       // word-break: break-all;
       overflow: hidden;
       text-overflow: ellipsis;
@@ -50,6 +51,7 @@
 
     .value {
       font-size: 0.8rem;
+      font-weight: bold;
     }
   }
 }
