--- a/src/pages/OrderDashboard/components/CardDetailDrawer/index.less
+++ b/src/pages/OrderDashboard/components/CardDetailDrawer/index.less
@@ -1,5 +1,18 @@
 .dfDrawerModal {
   :global {
+    .ant-drawer-header {
+      .ant-drawer-header-title {
+        position: relative;
+      }
+
+      .ant-drawer-close {
+        position: absolute;
+        right: 0;
+        padding-inline: 0;
+        margin-inline: 0;
+      }
+    }
+
     .ant-drawer-content {
       .ant-drawer-body {
         padding: 0;
