--- a/src/global.less
+++ b/src/global.less
@@ -4,6 +4,20 @@
 html,
 body {
   font-size: 16px;
+
+  .ant-layout {
+    .ant-layout-sider {
+      .ant-layout-sider-children {
+        .ant-pro-sider-logo {
+          display: none;
+        }
+      }
+
+      .ant-pro-sider-actions {
+        opacity: 0;
+      }
+    }
+  }
 }
 @media screen and (max-width: 1360px) {
   html,
